<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/app_name"
                  android:textSize="30sp"
                  android:padding="3dp"
                  android:gravity="center"
                  android:background="@color/actionbar_main"
                  android:id="@+id/textView17"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:textSize="30dp"
                  android:id="@+id/textView2" android:layout_below="@+id/textView17"
                  android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
        <TextView android:layout_width="200dp"
                  android:id="@+id/namesick"
                  android:layout_height="wrap_content"
                  android:layout_alignTop="@+id/textView2"
                  android:layout_toLeftOf="@+id/textView3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:id="@+id/textView3"
                android:textSize="25dp"
                android:layout_below="@+id/namesick"
                android:layout_alignRight="@+id/textView2"
                android:layout_marginTop="38dp"/>

        <TextView android:layout_width="200dp"
                  android:id="@+id/fsick"
                  android:layout_height="wrap_content"
                  android:layout_alignTop="@+id/textView3" android:layout_toLeftOf="@+id/textView3"/>
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/tel"
                  android:textSize="25dp"

                  android:id="@+id/textView4"
                  android:layout_alignBaseline="@+id/telsick" android:layout_alignBottom="@+id/telsick"
                  android:layout_toRightOf="@+id/fsick"/>

        <TextView android:layout_width="200dp"
                  android:id="@+id/telsick"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:layout_toLeftOf="@+id/textView4"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenseiat"
                android:id="@+id/textView5"
                android:textSize="25dp"
                android:layout_marginTop="44dp" android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"/>
        <TextView
                android:id="@+id/jenseiat"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_toRightOf="@+id/telsick"
                android:layout_toLeftOf="@+id/textView4"/>
       <TextView
               android:text="@string/time"
               android:textSize="25dp"

               android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
               android:layout_below="@+id/jenseiat"
               android:layout_alignParentRight="true"
               android:id="@+id/textView13"/>
        <TextView
                android:id="@+id/timesick"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_toLeftOf="@+id/textView13"/>
        <TextView
                android:text="@string/docter"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignRight="@+id/textView3"
                android:layout_alignLeft="@+id/textView13" android:id="@+id/textView14"/>
        <TextView
                android:id="@+id/doctersick"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:layout_below="@+id/textView14"
                android:layout_toLeftOf="@+id/textView14"/>
        <TextView
                android:text="@string/SPECIALTY"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                android:layout_below="@+id/doctersick"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/doctersick"/>
        <TextView
                android:id="@+id/spichalsick"
                android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/btnback"
                android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/telsick"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rezerv"
                android:id="@+id/btnrezerv"
                android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/telsick"/>
    </RelativeLayout>

</LinearLayout>